#------------------------------------------------------------------------------
# 
# Module : GamosCore_GamosData
# Package: GamosCore
#
#------------------------------------------------------------------------------
add_definitions(-DGmData_ALLOC_EXPORT)
# 
add_subdirectory(Management)
add_subdirectory(Data)
add_subdirectory(Users)
add_subdirectory(Distributions)
