#------------------------------------------------------------------------------
# 
# Module : GamosCore_GamosScoring
# Package: GamosCore
#
#------------------------------------------------------------------------------

add_definitions(-DGmScoring_ALLOC_EXPORT)

# 
add_subdirectory(Management)
add_subdirectory(Scorers)
add_subdirectory(Printers)
add_subdirectory(PointDetector)
